--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
       </ul>
     </section>
     <div class="cta">
-      <p>Found this guide helpful? <a href="#" target="_blank">Share it with your friends</a> and leave a comment below!</p>
+      <p>Found this guide helpful? <a href="https://whatsapp.com/channel/0029VaCBM8AKGGG9l6g6Lz0b" target="_blank">Share it with your friends</a> and leave a comment below!</p>
     </div>
   </div>
   <footer>
